feat: add api for restore bulk soft delete
